@@ -1,5 +1,0 @@
-FROM continuumio/miniconda3:latest
-
-ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
-
-RUN conda install -y pytorch pytorch-cuda=11.8 -c pytorch -c nvidia
