@@ -1,5 +1,0 @@
-FROM pytorch:latest
-
-ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
-
-RUN pip install numpy matplotlib psutil pynvml pytz scikit_learn networkx opencv-python
